fixed comments overlap in wide screen

--- a/src/components/videoPage/videoPage.css
+++ b/src/components/videoPage/videoPage.css
@@ -202,14 +202,13 @@ align-items: center;
     height: fit-content;
     display: flex;
     flex-direction: column;
-    padding-top: 0px;
-    width: 30%;
+    padding-top: 10px;
+ 
     margin-right: 0px;
-    margin-top: -2px;
+    margin-top: 0px;
     background-color: #121212;
     font-family: 'Roboto';
     color: white;
-    width: 100%;
 }
 
 .makeAComment{
@@ -266,6 +265,7 @@ align-items: center;
 .comment{
     font-size: 14px;
     font-weight: 400;
+    width:100%
 }
 .signedinprofilepic{
     height:40px;
@@ -374,11 +374,26 @@ gap:5px;
     .commentsdiv {
         margin-top: -1129px;
         padding-top: 20px;
-    }
+        align-items: center;
+        width: 100%;
+}
+    
     .comment{
         width: 75%;
     }
 
+  }
+  @media only screen and (max-width: 1234px) {
+    .secondary {
+      /* margin-top: 84px; */
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      /* align-items: center; */
+      width: 100%;
+      gap: 17px;
+      margin-left:20%;
+    }
   }
   
 
